--- a/index.html
+++ b/index.html
@@ -27,6 +27,17 @@
         </div>
     </section>
 
+    <section class="dream-big">
+        <div><img src="images/WhatsApp Image 2022-09-15 at 9.40.40 AM.jpeg" alt=""></div>
+        <div class="far">
+            <h1 class="background-add">Dream big</h1>
+            <p class="practice">become a web developer.</p>
+            <p>jvhiuhuihgugrucbnrtug.djkghfuhfohyfe,fyfe8hyfiyhfi.diy8fyeufhfi</p>
+            <p>jvhiuhuihgugrucbnrtug.djkghfuhfohyfe,fyfe8hyfiyhfi.diy8fyeufhfi</p>
+            <a class="link-button" target="_blank" href="">download file</a>
+        </div>
+    </section>
+
 </body>
 
 </html>
