--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 </head>
 
 <body>
-    <section class="top-banner">
+    <section class="top-banner flexible-container">
         <div class="half-width">
             <h1>Welcome to</h1>
             <h1><span class="orange-font">Mohammad Ramim's</span> world!</h1>
@@ -27,14 +27,33 @@
         </div>
     </section>
 
-    <section class="dream-big">
+    <section class="dream-big flexible-containe">
         <div><img src="images/WhatsApp Image 2022-09-15 at 9.40.40 AM.jpeg" alt=""></div>
-        <div class="far">
+        <div class="half-width">
             <h1 class="background-add">Dream big</h1>
             <p class="practice">become a web developer.</p>
             <p>jvhiuhuihgugrucbnrtug.djkghfuhfohyfe,fyfe8hyfiyhfi.diy8fyeufhfi</p>
             <p>jvhiuhuihgugrucbnrtug.djkghfuhfohyfe,fyfe8hyfiyhfi.diy8fyeufhfi</p>
             <a class="link-button" target="_blank" href="">download file</a>
+        </div>
+    </section>
+    <section class="experince-area">
+        <h1>EXPERIENCE</h1>
+
+        <div class="flexible-container">
+            <div>
+                <h1>full stack developer</h1>
+                <h3>2022-present.pro level developer</h3>
+                <p>jvhiuhuihgugrucbnrtug.djkghfuhfohyfe,fyfe8hyfiyhfi.diy8fyeufhfi</p>
+                <p>jvhiuhuihgugrucbnrtug.djkghfuhfohyfe,fyfe8hyfiyhfi.diy8fyeufhfi</p>
+
+            </div>
+            <div class="half-width">
+                <h1>baby web developer</h1>
+                <h3>2022-present. hero learner</h3>
+                <p>jvhiuhuihgugrucbnrtug.djkghfuhfohyfe,fyfe8hyfiyhfi.diy8fyeufhfi</p>
+                <p>jvhiuhuihgugrucbnrtug.djkghfuhfohyfe,fyfe8hyfiyhfi.diy8fyeufhfi</p>
+            </div>
         </div>
     </section>
 
