styled border & addeded foooter

--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
         </div>
     </section>
 
-    <section class="dream-big flexible-containe">
+    <section class="dream-big flexible-container">
         <div><img src="images/WhatsApp Image 2022-09-15 at 9.40.40 AM.jpeg" alt=""></div>
         <div class="half-width">
             <h1 class="background-add">Dream big</h1>
@@ -41,22 +41,35 @@
         <h1>EXPERIENCE</h1>
 
         <div class="flexible-container">
-            <div>
+            <div id="full-stack-developer" class="experience-item">
                 <h1>full stack developer</h1>
-                <h3>2022-present.pro level developer</h3>
-                <p>jvhiuhuihgugrucbnrtug.djkghfuhfohyfe,fyfe8hyfiyhfi.diy8fyeufhfi</p>
-                <p>jvhiuhuihgugrucbnrtug.djkghfuhfohyfe,fyfe8hyfiyhfi.diy8fyeufhfi</p>
+                <h3 class="maroon-colour">2022-present.pro level developer</h3>
+                <p>I am the master of HTML and Javascript. i know everything needed to make a website
+                    function,efficient.
+                </p>
+                <p>I am the master of HTML and Javascript. i know everything needed to make a website
+                    function,efficient.
+                </p>
 
             </div>
-            <div class="half-width">
+            <div id="baby-web-developer" class="experience-item">
+
                 <h1>baby web developer</h1>
-                <h3>2022-present. hero learner</h3>
-                <p>jvhiuhuihgugrucbnrtug.djkghfuhfohyfe,fyfe8hyfiyhfi.diy8fyeufhfi</p>
-                <p>jvhiuhuihgugrucbnrtug.djkghfuhfohyfe,fyfe8hyfiyhfi.diy8fyeufhfi</p>
+                <h3 class="maroon-colour">2022-present. hero learner</h3>
+                <p>I am the master of HTML and Javascript. i know everything needed to make a website
+                    function,efficient.
+                </p>
+                <p>I am the master of HTML and Javascript. i know everything needed to make a website
+                    function,efficient.
+                </p>
             </div>
         </div>
     </section>
 
+
 </body>
+<footer>
+    Mohammed Ramim 2022, A programming hero initiative.
+</footer>
 
 </html>
